// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonJsTransformer Exports Should convert ObjectLiteralExpression 1`] = `
"let exports = {}, module = { exports: exports };
exports = { a: b, c: d };
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.a, GENERATED_VAR_BY_TRANSFORMER_2 = exports.c;
export { GENERATED_VAR_BY_TRANSFORMER_1 as a, GENERATED_VAR_BY_TRANSFORMER_2 as c };
export default exports;"
`;

exports[`CommonJsTransformer Exports Should convert define.property for identifier 1`] = `
"let exports = {}, module = { exports: exports };
exports.a = b;
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.a;
export { GENERATED_VAR_BY_TRANSFORMER_1 as a };
export default exports;"
`;

exports[`CommonJsTransformer Exports Should convert define.property with getter 1`] = `
"let exports = {}, module = { exports: exports };
exports.hello = parts_js_1.PropertyPart;
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.hello;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default exports;"
`;

exports[`CommonJsTransformer Exports Should convert define.property with value 1`] = `
"let exports = {}, module = { exports: exports };
exports.__esModule = true;
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.__esModule;
export { GENERATED_VAR_BY_TRANSFORMER_1 as __esModule };
export default exports;"
`;

exports[`CommonJsTransformer Exports Should convert exports.default 1`] = `
"let exports = {}, module = { exports: exports };
exports.default = Hello;
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.default;
export { GENERATED_VAR_BY_TRANSFORMER_1 as default };"
`;

exports[`CommonJsTransformer Exports Should convert exports.name 1`] = `
"let exports = {}, module = { exports: exports };
exports.hello = Hello;
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.hello;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default exports;"
`;

exports[`CommonJsTransformer Exports Should convert exports.name with same name as the parameter 1`] = `
"let exports = {}, module = { exports: exports };
const hello = null;
exports.hello = hello;
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.hello;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default exports;"
`;

exports[`CommonJsTransformer Exports Should convert named export 1`] = `
"let exports = {}, module = { exports: exports };
exports.hello = Hello;
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.hello;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default exports;"
`;

exports[`CommonJsTransformer Exports Should convert to default export to ES6 1`] = `
"let exports = {}, module = { exports: exports };
exports = Hello;
export default exports;"
`;

exports[`CommonJsTransformer Exports Should export nested expression 1`] = `
"let exports = {}, module = { exports: exports };
(exports = function (key) {
    return key;
})('versions', []).push({
    version: '3.6.5',
});
export default exports;"
`;

exports[`CommonJsTransformer Exports Should export one default 1`] = `
"let exports = {}, module = { exports: exports };
exports.default = \\"hello\\";
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.default;
export { GENERATED_VAR_BY_TRANSFORMER_1 as default };"
`;

exports[`CommonJsTransformer Exports Should export one default 2`] = `
"let exports = {}, module = { exports: exports };
export default class Hello {
}
;
exports.hello = \\"hello\\";
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.hello;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };"
`;

exports[`CommonJsTransformer Exports Should move exports to top scope 1`] = `
"let exports = {}, module = { exports: exports };
if (typeof define === 'function' && define.amd) {
    define(function () {
        return LZString;
    });
}
else if (typeof module !== 'undefined' && module != null) {
    exports = LZString;
}
export default exports;"
`;

exports[`CommonJsTransformer Exports Should not override current export 1`] = `
"let exports = {}, module = { exports: exports };
exports.a = \\"a\\";
exports.b = \\"b\\";
export { hello as a };
export default \\"yoyo\\";
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.b;
export { GENERATED_VAR_BY_TRANSFORMER_1 as b };"
`;

exports[`CommonJsTransformer Forwards Should convert redirects 1`] = `
"let exports = {}, module = { exports: exports };
exports = require(\\"./hello.js\\");
export * from \\"./hello.js\\";
export default exports;"
`;

exports[`CommonJsTransformer Forwards Should convert redirects 2`] = `
"let exports = {}, module = { exports: exports };
import WrenchIcon from './icons/WrenchIcon.js';
exports = { WrenchIcon };
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.WrenchIcon;
export { GENERATED_VAR_BY_TRANSFORMER_1 as WrenchIcon };
export default exports;"
`;

exports[`CommonJsTransformer Import Should convert default import to ES6 1`] = `
"let exports = {}, module = { exports: exports };
import Hello from \\"./hello.ts\\";
export default exports;"
`;

exports[`CommonJsTransformer Import Should convert named import 1`] = `
"let exports = {}, module = { exports: exports };
import { Hello } from \\"./hello.ts\\";
export default exports;"
`;

exports[`CommonJsTransformer Import Should convert require in sub-scope 1`] = `
"let exports = {}, module = { exports: exports };
import GENERATED_VAR_BY_TRANSFORMER_1 from \\"hello.js\\";
{
    const hello = GENERATED_VAR_BY_TRANSFORMER_1;
}
export default exports;"
`;

exports[`CommonJsTransformer Import Should convert require without reference in sub-scope 1`] = `
"let exports = {}, module = { exports: exports };
import \\"hello.js\\";
if (true) {
    void 0;
}
export default exports;"
`;

exports[`CommonJsTransformer Import Should convert simple import 1`] = `
"let exports = {}, module = { exports: exports };
import \\"./hello.ts\\";
export default exports;"
`;

exports[`CommonJsTransformer Should read from internal export Should convert to multiple commands 1`] = `
"let exports = {}, module = { exports: exports };
exports.lastAttributeNameRegex = exports.createMarker = exports.isTemplatePartActive = void 0;
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.lastAttributeNameRegex, GENERATED_VAR_BY_TRANSFORMER_2 = exports.createMarker, GENERATED_VAR_BY_TRANSFORMER_3 = exports.isTemplatePartActive;
export { GENERATED_VAR_BY_TRANSFORMER_1 as lastAttributeNameRegex, GENERATED_VAR_BY_TRANSFORMER_2 as createMarker, GENERATED_VAR_BY_TRANSFORMER_3 as isTemplatePartActive };
export default exports;"
`;

exports[`CommonJsTransformer Should read from internal export Should red from internal export "hello" 1`] = `
"let exports = {}, module = { exports: exports };
exports.hello = \\"Hello\\";
console.log(exports.hello);
const GENERATED_VAR_BY_TRANSFORMER_1 = exports.hello;
export { GENERATED_VAR_BY_TRANSFORMER_1 as hello };
export default exports;"
`;
